<resources>
    <string name="app_name">Book Store</string>
    <string name="empty_view_text">Start adding some books!</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_books">Delete All Books</string>
    <string name="editor_activity_title_add_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="hint_book_name">Book Title</string>
    <string name="hint_book_price">Price</string>
    <string name="hint_book_quantity">Quantity</string>
    <string name="hint_book_supplier">Supplier</string>
    <string name="hint_book_phone">Supplier Phone Number</string>
    <string name="category_overview">Overview</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_update_book_failed">Error with updating book</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
</resources>
